update prompt, input size, and config print statement

--- a/example/transform/huggingface_model_json.ipynb
+++ b/example/transform/huggingface_model_json.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +73,7 @@
        "False"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,25 +104,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sample_instruction = \"\"\"Generate one question and its corresponding answer based on the context. Following \\\n",
-    "the format of the examples below to include context, question, and answer in the response.\"\"\"\n",
+    "# sample_instruction = \"\"\"Generate one question and its corresponding answer based on the context. Following \\\n",
+    "# the format of the examples below to include context, question, and answer in the response.\"\"\"\n",
     "\n",
-    "sample_examples = [\n",
-    "        Context(\n",
-    "            context=\"The quick brown fox jumps over the lazy dog.\",\n",
-    "            question=\"What is the color of the fox?\",\n",
-    "            answer=\"brown.\"\n",
-    "        ),\n",
-    "        Context(\n",
-    "            context=\"The quick brown fox jumps over the lazy black dog.\",\n",
-    "            question=\"What is the color of the dog?\",\n",
-    "            answer=\"black.\"\n",
-    "        )]\n",
+    "# sample_examples = [\n",
+    "#         Context(\n",
+    "#             context=\"The quick brown fox jumps over the lazy dog.\",\n",
+    "#             question=\"What is the color of the fox?\",\n",
+    "#             answer=\"brown.\"\n",
+    "#         ),\n",
+    "#         Context(\n",
+    "#             context=\"The quick brown fox jumps over the lazy black dog.\",\n",
+    "#             question=\"What is the color of the dog?\",\n",
+    "#             answer=\"black.\"\n",
+    "#         )]\n",
     "\n",
-    "guided_prompt = PromptTemplate(\n",
-    "    instruction=sample_instruction,\n",
-    "    few_shot_prompt=sample_examples\n",
-    ")"
+    "# guided_prompt = PromptTemplate(\n",
+    "#     instruction=sample_instruction,\n",
+    "#     few_shot_prompt=sample_examples\n",
+    "# )"
    ]
   },
   {
@@ -134,17 +134,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "sample size of raw context:  400\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "raw_context_input = [\n",
     "    \"\"\"We believe our success depends upon our capabilities in areas such as design, research and development, \\\n",
@@ -166,9 +158,9 @@
     "critical value to obtain a p-value. \"\"\"\n",
     "]\n",
     "\n",
-    "raw_context_input_400 = raw_context_input * 100\n",
+    "# raw_context_input_400 = raw_context_input * 100\n",
     "\n",
-    "print(\"sample size of raw context: \", len(raw_context_input_400))"
+    "# print(\"sample size of raw context: \", len(raw_context_input_400))"
    ]
   },
   {
@@ -180,14 +172,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sample size of processed input data:  400\n"
+      "sample size of processed input data:  4\n"
      ]
     },
     {
@@ -197,7 +189,7 @@
        " Context(context='In 1948, Claude E. Shannon published A Mathematical Theory of Communication (Shannon, 1948) establishing the theory of information. In his article, Shannon introduced the concept of information entropy for the first time. We will begin our journey here.')]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,7 +198,8 @@
     "\n",
     "input_data = [\n",
     "    Context(context=data)\n",
-    "    for data in raw_context_input_400\n",
+    "    # for data in raw_context_input_400\n",
+    "    for data in raw_context_input\n",
     "]\n",
     "\n",
     "print(\"sample size of processed input data: \", len(input_data))\n",
@@ -229,26 +222,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading checkpoint shards: 100%|██████████| 3/3 [00:04<00:00,  1.52s/it]\n"
+      "Loading checkpoint shards: 100%|██████████| 3/3 [01:49<00:00, 36.54s/it]\n"
      ]
     }
    ],
    "source": [
     "config = TransformQAHuggingFaceJsonFormatConfig(\n",
-    "    prompt_template=guided_prompt,\n",
+    "    # prompt_template=guided_prompt,\n",
     "    model_config=HuggingfaceModelConfig(\n",
     "            batch_size=64,\n",
     "            response_start_key=\"question\", response_format={\"type\": \"json_object\"}\n",
     "        )\n",
     ")\n",
     "client = TransformClient(config)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TransformQAHuggingFaceJsonFormatConfig(flow_name='TransformHuggingFaceFlow', model_config=HuggingfaceModelConfig(model_name='mistralai/Mistral-7B-Instruct-v0.2', model_server='HuggingfaceModelServer', batch_size=64, neuron=False, load_in_4bit=False, load_in_8bit=True, max_new_tokens=768, do_sample=False, temperature=0.0, num_beams=1, num_return_sequences=1, repetition_penalty=1.2, response_start_key='question', response_format={'type': 'json_object'}), num_thread=1, prompt_template=PromptTemplate(instruction='\\n        Generate one question and its corresponding answer based on the last context in the last\\n        example. Follow the format of the examples below to include context, question, and answer in the response.\\n        ', few_shot_prompt=[Context(context='The quick brown fox jumps over the lazy black dog.', question='What is the color of the fox?', answer='brown.'), Context(context='The quick brown fox jumps over the lazy black dog.', question='What is the color of the dog?', answer='black.')]))\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(config)"
    ]
   },
   {
@@ -260,28 +270,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/7 [00:00<?, ?it/s]"
+      "  0%|          | 0/1 [00:00<?, ?it/s]/opt/conda/envs/uniflow/lib/python3.10/site-packages/transformers/generation/configuration_utils.py:389: UserWarning: `do_sample` is set to `False`. However, `temperature` is set to `0.0` -- this flag is only used in sample-based generation modes. You should set `do_sample=True` or unset `temperature`.\n",
+      "  warnings.warn(\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/opt/conda/envs/uniflow/lib/python3.10/site-packages/transformers/generation/configuration_utils.py:389: UserWarning: `do_sample` is set to `False`. However, `temperature` is set to `0.0` -- this flag is only used in sample-based generation modes. You should set `do_sample=True` or unset `temperature`.\n",
-      "  warnings.warn(\n",
-      "100%|██████████| 7/7 [04:39<00:00, 39.94s/it]\n"
+      "100%|██████████| 1/1 [00:14<00:00, 14.07s/it]\n"
      ]
     }
    ],
    "source": [
     "output = client.run(input_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'output': [{'response': [{'context': 'We believe our success depends upon our capabilities in areas such as design, research and development, production and marketing and is supported and protected by our intellectual property rights, such as trademarks, utility and design patents, copyrights, and trade secrets, among others. We have followed a policy of applying for and registering intellectual property rights in the United States and select foreign countries on trademarks, inventions, innovations and designs that we deem valuable. W e also continue to vigorously protect our intellectual property, including trademarks, patents and trade secrets against third-party infringement and misappropriation.',\n",
+       "      'question': 'What types of intellectual property does the company protect?',\n",
+       "      'answer': 'The company protects various intellectual properties including trademarks, patents, copyrights, and trade secrets.'},\n",
+       "     {'context': 'In 1948, Claude E. Shannon published A Mathematical Theory of Communication (Shannon, 1948) establishing the theory of information. In his article, Shannon introduced the concept of information entropy for the first time. We will begin our journey here.',\n",
+       "      'question': 'When was the mathematical theory of communication first published?',\n",
+       "      'answer': 'In 1948 by Claude E. Shannon.'},\n",
+       "     {'context': 'The chain rule states that the derivative of a composite function (a function composed of another function) is equal to the derivative of the outer function multiplied by the derivative of the inner function.Mathematically, it can be written as: \\\\(\\x0crac{d}{dx}g(h(x)) = \\x0crac{dg}{dh}(h(x))\\\\cdot \\x0crac{dh}{dx}(x)\\\\).',\n",
+       "      'question': 'What mathematical rule is described as finding the derivative of a composite function?',\n",
+       "      'answer': 'The chain rule.'},\n",
+       "     {'context': 'Hypothesis testing involves making a claim about a population parameter based on sample data, and then conducting a test to determine whether this claim is supported or rejected. This typically involves calculating a test statistic, determining a significance level, and comparing the calculated value to a critical value to obtain a p-value.',\n",
+       "      'question': 'What is involved in hypothesis testing besides making a claim about a population parameter?',\n",
+       "      'answer': 'Hypothesis testing also includes calculating a test statistic, determining a significance level, and comparing the calculated value to a critical value to obtain a p-value.'}],\n",
+       "    'error': 'No errors.'}],\n",
+       "  'root': <uniflow.node.Node at 0x7f173068eef0>}]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "output"
    ]
   },
   {
@@ -295,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -313,18 +355,16 @@
       "            'valuable. W e also continue to vigorously protect our '\n",
       "            'intellectual property, including trademarks, patents and trade '\n",
       "            'secrets against third-party infringement and misappropriation.',\n",
-      " 'question': 'Which intellectual property rights does the company actively '\n",
-      "             'pursue and protect?',\n",
-      " 'answer': 'The company applies for and registers trademarks, utilizes patents '\n",
-      "           'for inventions and innovations, holds copyrights, and guards trade '\n",
-      "           'secrets.'}\n"
+      " 'question': 'What types of intellectual property does the company protect?',\n",
+      " 'answer': 'The company protects various intellectual properties including '\n",
+      "           'trademarks, patents, copyrights, and trade secrets.'}\n"
      ]
     }
    ],
    "source": [
     "from pprint import pprint\n",
     "\n",
-    "result = output[0]['output'][0]['response'][0] ## we only postprocess the first output\n",
+    "result = output[0]['output'][0]['response'][0] ## decode output\n",
     "\n",
     "pprint(result, sort_dicts=False)"
    ]
