--- a/example/transform/huggingface_model_json.ipynb
+++ b/example/transform/huggingface_model_json.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +73,7 @@
        "False"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,8 +83,8 @@
     "from IPython.display import display\n",
     "\n",
     "from uniflow.flow.client import TransformClient\n",
-    "from uniflow.flow.config import TransformHuggingFaceConfig, HuggingfaceModelConfig, TransformQAHuggingFaceJsonFormatConfig\n",
-    "from uniflow.op.prompt import PromptTemplate, Context\n",
+    "from uniflow.flow.config import HuggingfaceModelConfig, TransformQAHuggingFaceJsonFormatConfig\n",
+    "from uniflow.op.prompt import Context\n",
     "\n",
     "load_dotenv()"
    ]
@@ -99,33 +99,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# sample_instruction = \"\"\"Generate one question and its corresponding answer based on the context. Following \\\n",
-    "# the format of the examples below to include context, question, and answer in the response.\"\"\"\n",
-    "\n",
-    "# sample_examples = [\n",
-    "#         Context(\n",
-    "#             context=\"The quick brown fox jumps over the lazy dog.\",\n",
-    "#             question=\"What is the color of the fox?\",\n",
-    "#             answer=\"brown.\"\n",
-    "#         ),\n",
-    "#         Context(\n",
-    "#             context=\"The quick brown fox jumps over the lazy black dog.\",\n",
-    "#             question=\"What is the color of the dog?\",\n",
-    "#             answer=\"black.\"\n",
-    "#         )]\n",
-    "\n",
-    "# guided_prompt = PromptTemplate(\n",
-    "#     instruction=sample_instruction,\n",
-    "#     few_shot_prompt=sample_examples\n",
-    "# )"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -134,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,11 +129,7 @@
     "conducting a test to determine whether this claim is supported or rejected. This typically involves \\\n",
     "calculating a test statistic, determining a significance level, and comparing the calculated value to a \\\n",
     "critical value to obtain a p-value. \"\"\"\n",
-    "]\n",
-    "\n",
-    "# raw_context_input_400 = raw_context_input * 100\n",
-    "\n",
-    "# print(\"sample size of raw context: \", len(raw_context_input_400))"
+    "]"
    ]
   },
   {
@@ -172,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +158,7 @@
        " Context(context='In 1948, Claude E. Shannon published A Mathematical Theory of Communication (Shannon, 1948) establishing the theory of information. In his article, Shannon introduced the concept of information entropy for the first time. We will begin our journey here.')]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,7 +167,6 @@
     "\n",
     "input_data = [\n",
     "    Context(context=data)\n",
-    "    # for data in raw_context_input_400\n",
     "    for data in raw_context_input\n",
     "]\n",
     "\n",
@@ -215,27 +183,28 @@
     "\n",
     "In this example, we will use the [TransformQAHuggingFaceJsonFormatConfig](https://github.com/CambioML/uniflow/blob/main/uniflow/flow/config.py#L128)'s default LLM to generate questions and answers. Let's import the config and client of this model.\n",
     "\n",
-    "Here, we pass in our `guided_prompt` to the `TransformQAHuggingFaceJsonFormatConfig` to use our customized instructions and examples, instead of the `uniflow` default ones.\n",
+    "<!-- Here, we pass in our `guided_prompt` to the `TransformQAHuggingFaceJsonFormatConfig` to use our customized instructions and examples, instead of the `uniflow` default ones. -->\n",
     "\n",
-    "<!-- Note, base on your GPU memory, you can set your optimal `batch_size` below. (We attached our `batch_size` benchmarking results in the appendix of this notebook.) -->"
+    "Here, we use our default `PromptTemplate` to the `TransformQAHuggingFaceJsonFormatConfig`, but you can use your customized instructions and examples instead if you want.\n",
+    "\n",
+    "Note, base on your GPU memory, you can set your optimal `batch_size` below. (We attached our `batch_size` benchmarking results in the appendix of this notebook.)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading checkpoint shards: 100%|██████████| 3/3 [01:49<00:00, 36.54s/it]\n"
+      "Loading checkpoint shards: 100%|██████████| 3/3 [00:04<00:00,  1.65s/it]\n"
      ]
     }
    ],
    "source": [
     "config = TransformQAHuggingFaceJsonFormatConfig(\n",
-    "    # prompt_template=guided_prompt,\n",
     "    model_config=HuggingfaceModelConfig(\n",
     "            batch_size=64,\n",
     "            response_start_key=\"question\", response_format={\"type\": \"json_object\"}\n",
@@ -246,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -270,22 +239,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/1 [00:00<?, ?it/s]/opt/conda/envs/uniflow/lib/python3.10/site-packages/transformers/generation/configuration_utils.py:389: UserWarning: `do_sample` is set to `False`. However, `temperature` is set to `0.0` -- this flag is only used in sample-based generation modes. You should set `do_sample=True` or unset `temperature`.\n",
-      "  warnings.warn(\n"
+      "  0%|          | 0/1 [00:00<?, ?it/s]"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1/1 [00:14<00:00, 14.07s/it]\n"
+      "/opt/conda/envs/uniflow/lib/python3.10/site-packages/transformers/generation/configuration_utils.py:389: UserWarning: `do_sample` is set to `False`. However, `temperature` is set to `0.0` -- this flag is only used in sample-based generation modes. You should set `do_sample=True` or unset `temperature`.\n",
+      "  warnings.warn(\n",
+      "100%|██████████| 1/1 [00:13<00:00, 13.24s/it]\n"
      ]
     }
    ],
@@ -295,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -314,10 +284,10 @@
        "      'question': 'What is involved in hypothesis testing besides making a claim about a population parameter?',\n",
        "      'answer': 'Hypothesis testing also includes calculating a test statistic, determining a significance level, and comparing the calculated value to a critical value to obtain a p-value.'}],\n",
        "    'error': 'No errors.'}],\n",
-       "  'root': <uniflow.node.Node at 0x7f173068eef0>}]"
+       "  'root': <uniflow.node.Node at 0x7f5d49711a20>}]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
