--- a/example/transform/huggingface_model_json.ipynb
+++ b/example/transform/huggingface_model_json.ipynb
@@ -199,14 +199,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading checkpoint shards: 100%|██████████| 3/3 [00:04<00:00,  1.65s/it]\n"
+      "Loading checkpoint shards: 100%|██████████| 3/3 [00:04<00:00,  1.51s/it]\n"
      ]
     }
    ],
    "source": [
     "config = TransformQAHuggingFaceJsonFormatConfig(\n",
     "    model_config=HuggingfaceModelConfig(\n",
-    "            batch_size=64,\n",
+    "            batch_size=1,\n",
     "            response_start_key=\"question\", response_format={\"type\": \"json_object\"}\n",
     "        )\n",
     ")\n",
@@ -222,7 +222,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TransformQAHuggingFaceJsonFormatConfig(flow_name='TransformHuggingFaceFlow', model_config=HuggingfaceModelConfig(model_name='mistralai/Mistral-7B-Instruct-v0.2', model_server='HuggingfaceModelServer', batch_size=64, neuron=False, load_in_4bit=False, load_in_8bit=True, max_new_tokens=768, do_sample=False, temperature=0.0, num_beams=1, num_return_sequences=1, repetition_penalty=1.2, response_start_key='question', response_format={'type': 'json_object'}), num_thread=1, prompt_template=PromptTemplate(instruction='\\n        Generate one question and its corresponding answer based on the last context in the last\\n        example. Follow the format of the examples below to include context, question, and answer in the response.\\n        ', few_shot_prompt=[Context(context='The quick brown fox jumps over the lazy black dog.', question='What is the color of the fox?', answer='brown.'), Context(context='The quick brown fox jumps over the lazy black dog.', question='What is the color of the dog?', answer='black.')]))\n"
+      "TransformQAHuggingFaceJsonFormatConfig(flow_name='TransformHuggingFaceFlow', model_config=HuggingfaceModelConfig(model_name='mistralai/Mistral-7B-Instruct-v0.2', model_server='HuggingfaceModelServer', batch_size=1, neuron=False, load_in_4bit=False, load_in_8bit=True, max_new_tokens=768, do_sample=False, temperature=0.0, num_beams=1, num_return_sequences=1, repetition_penalty=1.2, response_start_key='question', response_format={'type': 'json_object'}), num_thread=1, prompt_template=PromptTemplate(instruction='\\n        Generate one question and its corresponding answer based on the last context in the last\\n        example. Follow the format of the examples below to include context, question, and answer in the response.\\n        ', few_shot_prompt=[Context(context='The quick brown fox jumps over the lazy black dog.', question='What is the color of the fox?', answer='brown.'), Context(context='The quick brown fox jumps over the lazy black dog.', question='What is the color of the dog?', answer='black.')]))\n"
      ]
     }
    ],
@@ -246,7 +246,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/1 [00:00<?, ?it/s]"
+      "  0%|          | 0/4 [00:00<?, ?it/s]"
      ]
     },
     {
@@ -255,7 +255,7 @@
      "text": [
       "/opt/conda/envs/uniflow/lib/python3.10/site-packages/transformers/generation/configuration_utils.py:389: UserWarning: `do_sample` is set to `False`. However, `temperature` is set to `0.0` -- this flag is only used in sample-based generation modes. You should set `do_sample=True` or unset `temperature`.\n",
       "  warnings.warn(\n",
-      "100%|██████████| 1/1 [00:13<00:00, 13.24s/it]\n"
+      "100%|██████████| 4/4 [00:47<00:00, 11.80s/it]\n"
      ]
     }
    ],
@@ -265,29 +265,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "[{'output': [{'response': [{'context': 'We believe our success depends upon our capabilities in areas such as design, research and development, production and marketing and is supported and protected by our intellectual property rights, such as trademarks, utility and design patents, copyrights, and trade secrets, among others. We have followed a policy of applying for and registering intellectual property rights in the United States and select foreign countries on trademarks, inventions, innovations and designs that we deem valuable. W e also continue to vigorously protect our intellectual property, including trademarks, patents and trade secrets against third-party infringement and misappropriation.',\n",
-       "      'question': 'What types of intellectual property does the company protect?',\n",
-       "      'answer': 'The company protects various intellectual properties including trademarks, patents, copyrights, and trade secrets.'},\n",
-       "     {'context': 'In 1948, Claude E. Shannon published A Mathematical Theory of Communication (Shannon, 1948) establishing the theory of information. In his article, Shannon introduced the concept of information entropy for the first time. We will begin our journey here.',\n",
-       "      'question': 'When was the mathematical theory of communication first published?',\n",
-       "      'answer': 'In 1948 by Claude E. Shannon.'},\n",
-       "     {'context': 'The chain rule states that the derivative of a composite function (a function composed of another function) is equal to the derivative of the outer function multiplied by the derivative of the inner function.Mathematically, it can be written as: \\\\(\\x0crac{d}{dx}g(h(x)) = \\x0crac{dg}{dh}(h(x))\\\\cdot \\x0crac{dh}{dx}(x)\\\\).',\n",
+       "      'question': 'What types of intellectual property does the company prioritize protecting?',\n",
+       "      'answer': 'The company prioritizes protecting intellectual property rights such as trademarks, utility and design patents, copyrights, and trade secrets.'}],\n",
+       "    'error': 'No errors.'}],\n",
+       "  'root': <uniflow.node.Node at 0x7fb2ddae9ea0>},\n",
+       " {'output': [{'response': [{'context': 'In 1948, Claude E. Shannon published A Mathematical Theory of Communication (Shannon, 1948) establishing the theory of information. In his article, Shannon introduced the concept of information entropy for the first time. We will begin our journey here.',\n",
+       "      'question': 'Who first introduced the concept of information entropy?',\n",
+       "      'answer': 'Claude E. Shannon.'}],\n",
+       "    'error': 'No errors.'}],\n",
+       "  'root': <uniflow.node.Node at 0x7fb2d3f07940>},\n",
+       " {'output': [{'response': [{'context': 'The chain rule states that the derivative of a composite function (a function composed of another function) is equal to the derivative of the outer function multiplied by the derivative of the inner function.Mathematically, it can be written as: \\\\(\\x0crac{d}{dx}g(h(x)) = \\x0crac{dg}{dh}(h(x))\\\\cdot \\x0crac{dh}{dx}(x)\\\\).',\n",
        "      'question': 'What mathematical rule is described as finding the derivative of a composite function?',\n",
-       "      'answer': 'The chain rule.'},\n",
-       "     {'context': 'Hypothesis testing involves making a claim about a population parameter based on sample data, and then conducting a test to determine whether this claim is supported or rejected. This typically involves calculating a test statistic, determining a significance level, and comparing the calculated value to a critical value to obtain a p-value.',\n",
+       "      'answer': 'The chain rule.'}],\n",
+       "    'error': 'No errors.'}],\n",
+       "  'root': <uniflow.node.Node at 0x7fb2ddae9d50>},\n",
+       " {'output': [{'response': [{'context': 'Hypothesis testing involves making a claim about a population parameter based on sample data, and then conducting a test to determine whether this claim is supported or rejected. This typically involves calculating a test statistic, determining a significance level, and comparing the calculated value to a critical value to obtain a p-value.',\n",
        "      'question': 'What is involved in hypothesis testing besides making a claim about a population parameter?',\n",
        "      'answer': 'Hypothesis testing also includes calculating a test statistic, determining a significance level, and comparing the calculated value to a critical value to obtain a p-value.'}],\n",
        "    'error': 'No errors.'}],\n",
-       "  'root': <uniflow.node.Node at 0x7f5d49711a20>}]"
+       "  'root': <uniflow.node.Node at 0x7fb2d22feb90>}]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -325,9 +331,11 @@
       "            'valuable. W e also continue to vigorously protect our '\n",
       "            'intellectual property, including trademarks, patents and trade '\n",
       "            'secrets against third-party infringement and misappropriation.',\n",
-      " 'question': 'What types of intellectual property does the company protect?',\n",
-      " 'answer': 'The company protects various intellectual properties including '\n",
-      "           'trademarks, patents, copyrights, and trade secrets.'}\n"
+      " 'question': 'What types of intellectual property does the company prioritize '\n",
+      "             'protecting?',\n",
+      " 'answer': 'The company prioritizes protecting intellectual property rights '\n",
+      "           'such as trademarks, utility and design patents, copyrights, and '\n",
+      "           'trade secrets.'}\n"
      ]
     }
    ],
@@ -351,29 +359,31 @@
     "\n",
     "## Appendix\n",
     "\n",
-    "We benchmarked to see the optimal `batch_size` for the `TransformQAHuggingFaceJsonFormatConfig` flow. The answer is \"It depends on your data token length, your GPU memory, your LLM size, etc.\" In the following experiment, we use a GPU with 24G memory and a quantized LLM (2G). We still use the above 400 raw data strings `raw_context_input_400`.\n",
+    "We benchmarked to see the optimal `batch_size` for the `TransformQAHuggingFaceJsonFormatConfig` flow. The answer is \"It depends on your data token length, your GPU memory, your LLM size, etc.\" In the following experiment, we use a GPU with 24G memory and a quantized LLM (2G). We still use the above raw data strings `raw_context_input`.\n",
     "\n",
     "\n",
     "Here are the results:\n",
     "\n",
     "- batch_size = 1\n",
-    "    100%|██████████| 400/400 [2:00:17<00:00, 18.04s/it]\n",
+    "    100%|██████████| 4/4 [00:47<00:00, 11.80s/it]\n",
     "- batch_size = 2\n",
-    "    100%|██████████| 200/200 [1:14:40<00:00, 22.40s/it]\n",
+    "    100%|██████████| 2/2 [00:35<00:00, 17.87s/it]\n",
     "- batch_size = 4\n",
-    "    100%|██████████| 100/100 [37:20<00:00, 22.41s/it]\n",
+    "    100%|██████████| 1/1 [00:13<00:00, 13.34s/it]\n",
     "- batch_size = 8\n",
-    "    100%|██████████| 50/50 [25:32<00:00, 30.65s/it]\n",
+    "    100%|██████████| 1/1 [00:13<00:00, 13.20s/it]\n",
     "- batch_size = 16\n",
-    "    100%|██████████| 25/25 [13:46<00:00, 33.05s/it]\n",
+    "    100%|██████████| 1/1 [00:13<00:00, 13.48s/it]\n",
     "- batch_size = 32\n",
-    "    100%|██████████| 13/13 [07:52<00:00, 36.38s/it]\n",
+    "    100%|██████████| 1/1 [00:13<00:00, 13.36s/it]\n",
     "- batch_size = 64\n",
-    "    100%|██████████| 7/7 [04:39<00:00, 39.94s/it]\n",
-    "- batch_size = 128: OOM\n",
-    "- batch_size = 256: OOM\n",
+    "    100%|██████████| 1/1 [00:13<00:00, 13.28s/it]\n",
+    "- batch_size = 128:\n",
+    "    100%|██████████| 1/1 [00:13<00:00, 13.33s/it]\n",
+    "- batch_size = 256:\n",
+    "    100%|██████████| 1/1 [00:13<00:00, 13.33s/it]\n",
     "\n",
-    "As you can see, the processing time is much shorter if `batch_size=64` compared with `batch_size=1`. However, it might lead to OOM error if `batch_size` is too large."
+    "As you can see, the processing time is much shorter if `batch_size=4` compared with `batch_size=1`. However, the increase in the speed will become more prominent when the input is bigger. While, it might lead to OOM error if `batch_size` is too large when handling some big dataset."
    ]
   }
  ],
