--- a/example/transform/huggingface_model_json.ipynb
+++ b/example/transform/huggingface_model_json.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Using Open-source HuggingFace Models to Generate QAs from Raw Data in JSON format\n",
     "\n",
-    "In this example, we will show you how to generate question-answers (QAs) from give text strings using open-source Huggingface models via uniflow's [HuggingFaceModelFlow](https://github.com/CambioML/uniflow/blob/main/uniflow/flow/model_flow.py#L86).\n",
+    "In this example, we will show you how to generate question-answers (QAs) from given text strings using open-source Huggingface models via uniflow's [HuggingFaceModelFlow](https://github.com/CambioML/uniflow/blob/main/uniflow/flow/model_flow.py#L86).\n",
     "\n",
     "### Before running the code\n",
     "\n",
@@ -95,14 +95,14 @@
    "source": [
     "### Prepare sample prompts\n",
     "\n",
-    "First, we need to demonstrate sample prompts for LLM, those include instruction and sample json format. We do this by giving a sample instruction and list of `Context` examples to the `PromptTemplate` class."
+    "First, we need to demonstrate sample prompts for LLM, those include instruction and sample json format. We do this by giving a sample instruction and list of `Context` examples to the `PromptTemplate` class. However, since we are using the default `PromptTemplate` in this example, we will not create it separately."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Second, we craft some dummy sample raw text strings. Below, we build a dataset with 400 text strings."
+    "Second, we craft some dummy sample raw text strings. Below, we build a dataset with some text strings."
    ]
   },
   {
@@ -183,9 +183,7 @@
     "\n",
     "In this example, we will use the [TransformQAHuggingFaceJsonFormatConfig](https://github.com/CambioML/uniflow/blob/main/uniflow/flow/config.py#L128)'s default LLM to generate questions and answers. Let's import the config and client of this model.\n",
     "\n",
-    "<!-- Here, we pass in our `guided_prompt` to the `TransformQAHuggingFaceJsonFormatConfig` to use our customized instructions and examples, instead of the `uniflow` default ones. -->\n",
-    "\n",
-    "Here, we use our default `PromptTemplate` to the `TransformQAHuggingFaceJsonFormatConfig`, but you can use your customized instructions and examples instead if you want.\n",
+    "Here in this example, we use our default `PromptTemplate` to the `TransformQAHuggingFaceJsonFormatConfig`, but you can use your customized instructions and examples instead if you want.\n",
     "\n",
     "Note, base on your GPU memory, you can set your optimal `batch_size` below. (We attached our `batch_size` benchmarking results in the appendix of this notebook.)"
    ]
