--- a/example/transform/huggingface_model_json.ipynb
+++ b/example/transform/huggingface_model_json.ipynb
@@ -383,6 +383,19 @@
     "\n",
     "As you can see, the processing time is much shorter if `batch_size=4` compared with `batch_size=1`. However, the increase in the speed will become more prominent when the input is bigger. While, it might lead to OOM error if `batch_size` is too large when handling some big dataset."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## End of the notebook\n",
+    "\n",
+    "Check more Uniflow use cases in the [example folder](https://github.com/CambioML/uniflow/tree/main/example/model#examples)!\n",
+    "\n",
+    "<a href=\"https://www.cambioml.com/\" title=\"Title\">\n",
+    "    <img src=\"../image/cambioml_logo_large.png\" style=\"height: 100px; display: block; margin-left: auto; margin-right: auto;\"/>\n",
+    "</a>"
+   ]
   }
  ],
  "metadata": {
