add aws instance type

--- a/example/transform/huggingface_model_json.ipynb
+++ b/example/transform/huggingface_model_json.ipynb
@@ -357,7 +357,7 @@
     "\n",
     "## Appendix\n",
     "\n",
-    "We benchmarked to see the optimal `batch_size` for the `TransformQAHuggingFaceJsonFormatConfig` flow. The answer is \"It depends on your data token length, your GPU memory, your LLM size, etc.\" In the following experiment, we use a GPU with 24G memory and a quantized LLM (2G). We still use the above raw data strings `raw_context_input`.\n",
+    "We benchmarked to see the optimal `batch_size` for the `TransformQAHuggingFaceJsonFormatConfig` flow. The answer is \"It depends on your data token length, your GPU memory, your LLM size, etc.\" In the following experiment, we use an AWS `g5.2xlarge` instance that has a GPU with 24G memory and a quantized LLM (2G). We still use the above raw data strings `raw_context_input`.\n",
     "\n",
     "\n",
     "Here are the results:\n",
