remove redundant import

--- a/example/transform/huggingface_model_json.ipynb
+++ b/example/transform/huggingface_model_json.ipynb
@@ -79,14 +79,9 @@
     }
    ],
    "source": [
-    "from dotenv import load_dotenv\n",
-    "from IPython.display import display\n",
-    "\n",
     "from uniflow.flow.client import TransformClient\n",
     "from uniflow.flow.config import HuggingfaceModelConfig, TransformQAHuggingFaceJsonFormatConfig\n",
-    "from uniflow.op.prompt import Context\n",
-    "\n",
-    "load_dotenv()"
+    "from uniflow.op.prompt import Context"
    ]
   },
   {
